k8s-resources/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: k8s-challenge
spec:
  selector:
    app: k8s-challenge
  ports:
    - port: 4000
